fix ridiculously large gap between uls and echo

--- a/resources/styles/skin.cali.lang.less
+++ b/resources/styles/skin.cali.lang.less
@@ -2,10 +2,11 @@
 	float: right;
 	top: 0;
 	position: relative;
-	height: 33px;
+	height: 35px;
 	margin: 0 0 0 5px;
-	font-family: sans-serif;
-	font-size: 1.4em;
+	font-size: 9.5pt;
+    font-family: sans-serif;
+	padding-left: 0.2em;
 	&:hover {
 		background: #EF574F;
 		max-height: 35px;
